# BrainSerialLogger

./: .gitignore  CMakeLists.txt  README.md  release_changelog.txt
.github/workflows/: build.yml
BrainSerialLogger/: CMakeLists.txt
BrainSerialLogger/include/: serial_port.h
BrainSerialLogger/src/: main.cpp  serial_port.cpp
